# libebur128

./: .gitignore  .gitmodules  CMakeLists.txt  README  README.md  TODO  build.sh  config.h.in
.github/workflows/: build.yml
cmake/: CompilerFlags.txt  FindAVFORMAT.cmake  FindGLIB.cmake  FindGSTREAMER.cmake  FindGStreamer.cmake  FindMPCDEC.cmake  FindRSVG2.cmake  FindSNDFILE.cmake  FindSpeexDSP.cmake  FindTAGLIB.cmake  Findsndfile.cmake  WarningFlags.txt  amd64-mingw32msvc-gcc.cmake  i486-mingw32.cmake  i586-mingw32msvc.cmake  i686-w64-mingw32.cmake  lsb-4-0.cmake  utils.cmake  wine.cmake  wine32.cmake  x86_64-w64-mingw32.cmake
config/: plugin_path.h.in  use_sndfile.h.in  use_speex.h.in  use_taglib.h.in
debian.upstream/: changelog  control  copyright  loudness-cli.install  loudness-drop-gtk.install  loudness-drop-qt.install  loudness-input-ffmpeg.install  loudness-input-gstreamer.install  loudness-input-mpg123.dirs  loudness-input-mpg123.install  loudness-input-musepack.install  loudness-input-sndfile.install
doc/: Doxyfile  build  build-lsb-32  build-lsb-64  build-mingw  compile-options  f15-setup  schrootsetup-lsb-32  schrootsetup-lsb-64  schrootsetup-mingw-w64  setup-s32.sh  setup-s64.sh
doc/license/: queue.txt
ebur128/: CMakeLists.txt  ebur128.c  ebur128.def  ebur128.h
libebur128/: .gitignore  CMakeLists.txt  ebur128.c  ebur128.h
libebur128/speex_resample/: CMakeLists.txt  resample.c
libinputaudio/: CMakeLists.txt  input.c  input.h  input_ffmpeg.c  input_gstreamer.c  input_mpcdec.c  input_mpg123.c  input_sndfile.c  input_win32.c
scanner/: CMakeLists.txt  input.c  input.h  input_ffmpeg.c  input_mpcdec.c  input_mpg123.c  input_sndfile.c  logo.h  minimal_example.c  nproc.c  parse_args.c  parse_global_args.c  parse_global_args.h  rgtag.cpp  rgtag.h  scanner-common.c  scanner-common.h  scanner-drop-qt.cpp  scanner-drop-qt.h  scanner-drop.c  scanner-dump.c  scanner-dump.h  scanner-new.c  scanner-scan.c  scanner-scan.h  scanner-tag.c  scanner-tag.h  scanner.c  tests.c
scanner/inputaudio/: CMakeLists.txt  input.c  input.h  input_ffmpeg.c  input_gstreamer.c  input_helper.c  input_mpcdec.c  input_sndfile.c  input_win32.c  mp3_padding.c  mp3_padding.h  mp4_padding.c  mp4_padding.h
scanner/inputaudio/ffmpeg/: CMakeLists.txt  input_ffmpeg.c  mp3_padding.c  mp3_padding.h  mp4_padding.c  mp4_padding.h
scanner/inputaudio/gstreamer/: CMakeLists.txt  input_gstreamer.c
scanner/inputaudio/mpcdec/: CMakeLists.txt  input_mpcdec.c
scanner/inputaudio/mpg123/: CMakeLists.txt  input_mpg123.c
scanner/inputaudio/sndfile/: CMakeLists.txt  input_sndfile.c
scanner/scanner-common/: CMakeLists.txt  nproc.c  nproc.h  parse_args.c  parse_args.h  scanner-common.c  scanner-common.h
scanner/scanner-drop-gtk/: CMakeLists.txt  scanner-drop.c
scanner/scanner-drop-qt/: CMakeLists.txt  scanner-drop-qt.cpp  scanner-drop-qt.h
scanner/scanner-tag/: CMakeLists.txt  rgtag.cpp  rgtag.h  scanner-tag.c  scanner-tag.h
src/: CMakeLists.txt  common.h  ebur128.c  ebur128.h  ffmpeg.c  ffmpeg_example.c  input.h  input_ffmpeg.c  input_mpcdec.c  input_mpg123.c  input_sndfile.c  main.c  minimal_example.c  mpcdec.c  mpcdec_example.c  mpg123_example.c  nproc.c  r128-tag.py  rgtag.cpp  rgtag.py  scanner.c  sndfile_example.c  tests.c
src/speex_resample/: CMakeLists.txt
test/: CMakeLists.txt  fuzzer.cpp  minimal-example.c  tests.c
